update for IDEA 2021.2
* update to Gradle 7.1.1
* migrate build to Kotlin
* some docs update